# egads

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
lite/: CMakeLists.txt
src/: CMakeLists.txt  egadsTessInp.c
